err/pymissingdata.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/PyMissingData'...
Compiling './lib/python3.5/site-packages/PyMissingData/bayesian_learner.py'...
***   File "./lib/python3.5/site-packages/PyMissingData/bayesian_learner.py", line 42
    print "Iteration: "+str(i)
                      ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/PyMissingData/compare_tools.py'...
***   File "./lib/python3.5/site-packages/PyMissingData/compare_tools.py", line 85
    print "Comparison of results"
                                ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/PyMissingData/libpgm_static'...
Listing './lib/python3.5/site-packages/PyMissingData/libpgm_static/CPDtypes'...
Compiling './lib/python3.5/site-packages/PyMissingData/libpgm_static/CPDtypes/lg.py'...
***   File "./lib/python3.5/site-packages/PyMissingData/libpgm_static/CPDtypes/lg.py", line 79
    print "Attempted to sample node with unassigned parents."
                                                            ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/PyMissingData/libpgm_static/CPDtypes/lgandd.py'...
***   File "./lib/python3.5/site-packages/PyMissingData/libpgm_static/CPDtypes/lgandd.py", line 98
    print "Did not find LG and discrete type parents."
                                                     ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/PyMissingData/libpgm_static/dictionary.py'...
***   File "./lib/python3.5/site-packages/PyMissingData/libpgm_static/dictionary.py", line 81
    raise ValueError, "Convert to JSON from input file failed. Check formatting."
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/PyMissingData/libpgm_static/discretebayesiannetwork.py'...
***   File "./lib/python3.5/site-packages/PyMissingData/libpgm_static/discretebayesiannetwork.py", line 77
    raise Exception, "Inputs were malformed; first arg must contain V and E attributes and second arg must contain Vdata attribute."
                   ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/PyMissingData/libpgm_static/dyndiscbayesiannetwork.py'...
***   File "./lib/python3.5/site-packages/PyMissingData/libpgm_static/dyndiscbayesiannetwork.py", line 89
    raise Exception, "Inputs were malformed; first arg must contain V and E attributes and second arg must contain initial_Vdata and twotbn_Vdata attributes."
                   ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/PyMissingData/libpgm_static/hybayesiannetwork.py'...
***   File "./lib/python3.5/site-packages/PyMissingData/libpgm_static/hybayesiannetwork.py", line 70
    raise Exception, "Inputs were malformed; first arg must contain V and E attributes and second arg must contain Vdata and nodes attributes."
                   ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/PyMissingData/libpgm_static/lgbayesiannetwork.py'...
***   File "./lib/python3.5/site-packages/PyMissingData/libpgm_static/lgbayesiannetwork.py", line 83
    raise Exception, "Inputs were malformed; first arg must contain V and E attributes and second arg must contain Vdata attribute."
                   ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/PyMissingData/libpgm_static/nodedata.py'...
***   File "./lib/python3.5/site-packages/PyMissingData/libpgm_static/nodedata.py", line 91
    print "Error: NodeData did not recognize input file format."
                                                               ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/PyMissingData/libpgm_static/pgmlearner.py'...
***   File "./lib/python3.5/site-packages/PyMissingData/libpgm_static/pgmlearner.py", line 35
    raise ImportError, "numpy is not installed on your system."
                     ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/PyMissingData/libpgm_static/tablecpdfactor.py'...
***   File "./lib/python3.5/site-packages/PyMissingData/libpgm_static/tablecpdfactor.py", line 236
    raise Exception, "Second arg was not a possible value of first arg."
                   ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/PyMissingData-1.1.2.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
